# ZNiMPR-Zaawansowane-narzedzia-i-metody-programowania-robotow-autonomicznych

./: .gitignore  .gitmodules  README.md
Lab02 Docker/: Dockerfile  docker_gui.sh
Lab05 Neural Networks/AIProject/ai/: __init__.py
Lab05 Neural Networks/AIProject/ai/datasets/: __init__.py  basic.py
Lab05 Neural Networks/AIProject/ai/losses/: __init__.py  classification.py
Lab05 Neural Networks/AIProject/ai/losses/gan/: __init__.py  minmax.py  wasserstein.py
Lab05 Neural Networks/AIProject/ai/models/image/: __init__.py  classifier.py  discriminator.py  generator.py
Lab05 Neural Networks/AIProject/ai/utils/: __init__.py  display.py
Lab05 Neural Networks/AIProject/experiments/: gan_example.py  mnist_flat_clsssify.py  mnist_image_clsssify.py  playground_data.py  playground_model.py  playground_performance.py
Lab06_pcl/cam_3d_ws/: enter.sh  run.sh  rviz_config.rviz
Lab06_pcl/cam_3d_ws/install/: local_setup.sh  setup.sh
Lab06_pcl/cam_3d_ws/install/gawron_filtering_launch/share/gawron_filtering_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Lab06_pcl/cam_3d_ws/install/gawron_filtering_msgs/share/gawron_filtering_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Lab06_pcl/cam_3d_ws/install/gawron_plane_meta/include/gawron_plane_meta/: gawron_plane_meta.hpp  gawron_plane_meta_node.hpp  visibility_control.hpp
Lab06_pcl/cam_3d_ws/install/gawron_plane_meta/share/gawron_plane_meta/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Lab06_pcl/cam_3d_ws/install/gawron_plane_seg/include/gawron_plane_seg/: gawron_plane_seg.hpp  gawron_plane_seg_node.hpp  visibility_control.hpp
Lab06_pcl/cam_3d_ws/log/: latest_build
Lab06_pcl/cam_3d_ws/src/interface/gawron_filtering_launch/: CMakeLists.txt  package.xml
Lab06_pcl/cam_3d_ws/src/interface/gawron_filtering_launch/launch/: gawron_filtering_launch.launch.py
Lab06_pcl/cam_3d_ws/src/interface/gawron_filtering_msgs/: CMakeLists.txt  package.xml
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_meta/: CMakeLists.txt  README.md  package.xml
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_meta/include/gawron_plane_meta/: gawron_plane_meta.hpp  gawron_plane_meta_node.hpp  visibility_control.hpp
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_meta/launch/: gawron_plane_meta.launch.py
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_meta/src/: gawron_plane_meta.cpp  gawron_plane_meta_node.cpp
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_meta/test/: test_gawron_plane_meta.cpp
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_seg/: CMakeLists.txt  README.md  package.xml
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_seg/include/gawron_plane_seg/: gawron_plane_seg.hpp  gawron_plane_seg_node.hpp  visibility_control.hpp
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_seg/launch/: gawron_plane_seg.launch.py
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_seg/src/: gawron_plane_seg.cpp  gawron_plane_seg_node.cpp
Lab06_pcl/cam_3d_ws/src/perception/gawron_plane_seg/test/: test_gawron_plane_seg.cpp
Lab06_pcl/cam_3d_ws/src/perception/noise_filter/: CMakeLists.txt  README.md  package.xml
Lab06_pcl/cam_3d_ws/src/perception/noise_filter/config/: defaults.param.yaml
Lab06_pcl/cam_3d_ws/src/perception/noise_filter/include/noise_filter/: noise_filter.hpp  noise_filter_node.hpp  visibility_control.hpp
Lab06_pcl/cam_3d_ws/src/perception/noise_filter/launch/: noise_filter.launch.py
Lab06_pcl/cam_3d_ws/src/perception/noise_filter/src/: noise_filter.cpp  noise_filter_node.cpp
Lab06_pcl/cam_3d_ws/src/perception/surname_plane/: package.xml
Lab06_pcl/cam_3d_ws/src/perception/surname_plane/src/: surname_plane.cpp
Lab06_pcl/cam_3d_ws/tools/docker/: Dockerfile  bashrc-git-prompt  build.sh  entrypoint
Lab06_pcl/dgps_subscription/: CMakeLists.txt  README.md  package.xml
Lab06_pcl/dgps_subscription/dgps_subscription/: dgps_subscription.py  dgps_subscription_node.py
Lab06_pcl/dgps_subscription/launch/: dgps_subscription.launch.py
Lab06_pcl/dgps_subscription/test/: test_dgps_subscription.py
Lab07_moveit/moveit_ws/: run.sh
Lab07_moveit/moveit_ws/.devcontainer/: Dockerfile  build.sh
Lab07_moveit/moveit_ws/src/gawron_node_service/: CMakeLists.txt  README.md  package.xml
Lab07_moveit/moveit_ws/src/gawron_node_service/include/gawron_node_service/: gawron_node_service.hpp  gawron_node_service_node.hpp  visibility_control.hpp
Lab07_moveit/moveit_ws/src/gawron_node_service/launch/: gawron_node_service.launch.py
Lab07_moveit/moveit_ws/src/gawron_node_service/src/: gawron_node_service.cpp  gawron_node_service_node.cpp
Lab07_moveit/moveit_ws/src/gawron_node_service/test/: test_gawron_node_service.cpp
Lab07_moveit/moveit_ws/src/gawron_service/: CMakeLists.txt  package.xml
Lab07_moveit/moveit_ws/src/gawron_service/srv/: CustomService.srv
Lab07_moveit/moveit_ws/src/moveit_demo/: CMakeLists.txt  package.xml
Lab07_moveit/moveit_ws/src/moveit_demo/launch/: moveit_demo.launch.py
Lab08_cartographer/cartographer_ws/: run.sh  terminal.txt
Lab08_cartographer/cartographer_ws/.devcontainer/: Dockerfile  build.sh
Lab08_cartographer/cartographer_ws/src/cartographer_demo/: CMakeLists.txt  README.md  package.xml
Lab08_cartographer/cartographer_ws/src/cartographer_demo/config/: localization.lua  mapping.lua
Lab08_cartographer/cartographer_ws/src/cartographer_demo/launch/: cartographer.launch.py  demo.launch.py
Lab08_cartographer/cartographer_ws/src/cartographer_demo/rviz/: cartographer.rviz
surname_plane/: CMakeLists.txt  README.md
surname_plane/include/surname_plane/: surname_plane.hpp  surname_plane_node.hpp  visibility_control.hpp
surname_plane/launch/: surname_plane.launch.py
surname_plane/src/: surname_plane_node.cpp
surname_plane/test/: test_surname_plane.cpp
(+122 files in other folders)
