<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gawron_filtering_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gawron.pawel1999@gmail.com">pawel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gawron_plane_meta</depend>
  <depend>noise_filter</depend>
  <depend>surname_plane</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
